After site install

--- a/.gitignore
+++ b/.gitignore
@@ -12,7 +12,7 @@
 /web/sites/*/settings.local.php
 
 # Ignore Drupal's file directory
-/web/sites/*/files/
+/web/sites/*/files/*
 
 # Ignore SimpleTest multi-site environment.
 /web/sites/simpletest
@@ -22,3 +22,6 @@
 
 # Ignore .env files as they are personal
 /.env
+
+# Unignore SQLite DB file
+!/web/sites/default/files/drupaldb.sqlite
