Comment out "/server-status" endpoint

--- a/config/apache/20-httpd.conf
+++ b/config/apache/20-httpd.conf
@@ -43,12 +43,13 @@ ServerAdmin root@localhost
 
 #
 # Enable server status endpoint for stats.
+# WARNING: This is very cool for monitoring but /server-status should not be accessible from the internet!
 #
-ExtendedStatus On
-<Location "/server-status">
-    SetHandler server-status
-    Require all granted
-</Location>
+#ExtendedStatus On
+#<Location "/server-status">
+#    SetHandler server-status
+#    Require all granted
+#</Location>
 
 <IfModule mime_module>
     #
