Fix SQLite DB permission issues

--- a/.dockerignore
+++ b/.dockerignore
@@ -2,6 +2,9 @@
 /.idea
 .DS_Store
 
+Dockerfile
+docker-compose.yml
+
 # Ignore files that will be installed by Composer
 /drush/Commands
 /web/core
