--- a/config/apache/20-httpd.conf
+++ b/config/apache/20-httpd.conf
@@ -13,8 +13,8 @@ Listen 80
 
 Include conf.modules.d/*.conf
 
-User apache
-Group apache
+User www-data
+Group www-data
 
 ServerName localhost
 ServerAdmin root@localhost
